TextTemplate/Generated/GoTemplateParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.13.1
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from TextTemplate/GoTemplate.g4 by ANTLR 4.13.1

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.13.1")]
[System.CLSCompliant(false)]
public partial class GoTemplateParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, T__14=15, LEFT_DELIM=16, 
		RIGHT_DELIM=17, STRING=18, NUMBER=19, BOOLEAN=20, IDENTIFIER=21, TEXT=22, 
		WS=23, COMMENT=24;
	public const int
		RULE_template = 0, RULE_element = 1, RULE_action = 2, RULE_elseAction = 3, 
		RULE_pipeline = 4, RULE_command = 5, RULE_operand = 6, RULE_primary = 7, 
		RULE_chainedField = 8, RULE_variable = 9, RULE_functionCall = 10, RULE_literal = 11;
	public static readonly string[] ruleNames = {
		"template", "element", "action", "elseAction", "pipeline", "command", 
		"operand", "primary", "chainedField", "variable", "functionCall", "literal"
	};

	private static readonly string[] _LiteralNames = {
		null, "'if'", "'end'", "'range'", "'with'", "'define'", "'template'", 
		"'block'", "'else'", "'|'", "'.'", "'('", "','", "')'", "'$'", "'nil'", 
		"'{{'", "'}}'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, null, "LEFT_DELIM", "RIGHT_DELIM", "STRING", "NUMBER", 
		"BOOLEAN", "IDENTIFIER", "TEXT", "WS", "COMMENT"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "GoTemplate.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override int[] SerializedAtn { get { return _serializedATN; } }

	static GoTemplateParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public GoTemplateParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public GoTemplateParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class TemplateContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ElementContext[] element() {
			return GetRuleContexts<ElementContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public ElementContext element(int i) {
			return GetRuleContext<ElementContext>(i);
		}
		public TemplateContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_template; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGoTemplateListener typedListener = listener as IGoTemplateListener;
			if (typedListener != null) typedListener.EnterTemplate(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGoTemplateListener typedListener = listener as IGoTemplateListener;
			if (typedListener != null) typedListener.ExitTemplate(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGoTemplateVisitor<TResult> typedVisitor = visitor as IGoTemplateVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitTemplate(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public TemplateContext template() {
		TemplateContext _localctx = new TemplateContext(Context, State);
		EnterRule(_localctx, 0, RULE_template);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 27;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 24;
					element();
					}
					} 
				}
				State = 29;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,0,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ElementContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode TEXT() { return GetToken(GoTemplateParser.TEXT, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ActionContext action() {
			return GetRuleContext<ActionContext>(0);
		}
		public ElementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_element; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGoTemplateListener typedListener = listener as IGoTemplateListener;
			if (typedListener != null) typedListener.EnterElement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGoTemplateListener typedListener = listener as IGoTemplateListener;
			if (typedListener != null) typedListener.ExitElement(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGoTemplateVisitor<TResult> typedVisitor = visitor as IGoTemplateVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitElement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ElementContext element() {
		ElementContext _localctx = new ElementContext(Context, State);
		EnterRule(_localctx, 2, RULE_element);
		try {
			State = 32;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case TEXT:
				EnterOuterAlt(_localctx, 1);
				{
				State = 30;
				Match(TEXT);
				}
				break;
			case LEFT_DELIM:
				EnterOuterAlt(_localctx, 2);
				{
				State = 31;
				action();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ActionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] LEFT_DELIM() { return GetTokens(GoTemplateParser.LEFT_DELIM); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LEFT_DELIM(int i) {
			return GetToken(GoTemplateParser.LEFT_DELIM, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PipelineContext pipeline() {
			return GetRuleContext<PipelineContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] RIGHT_DELIM() { return GetTokens(GoTemplateParser.RIGHT_DELIM); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RIGHT_DELIM(int i) {
			return GetToken(GoTemplateParser.RIGHT_DELIM, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public TemplateContext template() {
			return GetRuleContext<TemplateContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ElseActionContext elseAction() {
			return GetRuleContext<ElseActionContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode STRING() { return GetToken(GoTemplateParser.STRING, 0); }
		public ActionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_action; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGoTemplateListener typedListener = listener as IGoTemplateListener;
			if (typedListener != null) typedListener.EnterAction(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGoTemplateListener typedListener = listener as IGoTemplateListener;
			if (typedListener != null) typedListener.ExitAction(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGoTemplateVisitor<TResult> typedVisitor = visitor as IGoTemplateVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAction(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ActionContext action() {
		ActionContext _localctx = new ActionContext(Context, State);
		EnterRule(_localctx, 4, RULE_action);
		int _la;
		try {
			State = 100;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,6,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 34;
				Match(LEFT_DELIM);
				State = 35;
				pipeline();
				State = 36;
				Match(RIGHT_DELIM);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 38;
				Match(LEFT_DELIM);
				State = 39;
				Match(T__0);
				State = 40;
				pipeline();
				State = 41;
				Match(RIGHT_DELIM);
				State = 42;
				template();
				State = 44;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
				case 1:
					{
					State = 43;
					elseAction();
					}
					break;
				}
				State = 46;
				Match(LEFT_DELIM);
				State = 47;
				Match(T__1);
				State = 48;
				Match(RIGHT_DELIM);
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 50;
				Match(LEFT_DELIM);
				State = 51;
				Match(T__2);
				State = 52;
				pipeline();
				State = 53;
				Match(RIGHT_DELIM);
				State = 54;
				template();
				State = 56;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,3,Context) ) {
				case 1:
					{
					State = 55;
					elseAction();
					}
					break;
				}
				State = 58;
				Match(LEFT_DELIM);
				State = 59;
				Match(T__1);
				State = 60;
				Match(RIGHT_DELIM);
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 62;
				Match(LEFT_DELIM);
				State = 63;
				Match(T__3);
				State = 64;
				pipeline();
				State = 65;
				Match(RIGHT_DELIM);
				State = 66;
				template();
				State = 68;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
				case 1:
					{
					State = 67;
					elseAction();
					}
					break;
				}
				State = 70;
				Match(LEFT_DELIM);
				State = 71;
				Match(T__1);
				State = 72;
				Match(RIGHT_DELIM);
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 74;
				Match(LEFT_DELIM);
				State = 75;
				Match(T__4);
				State = 76;
				Match(STRING);
				State = 77;
				Match(RIGHT_DELIM);
				State = 78;
				template();
				State = 79;
				Match(LEFT_DELIM);
				State = 80;
				Match(T__1);
				State = 81;
				Match(RIGHT_DELIM);
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 83;
				Match(LEFT_DELIM);
				State = 84;
				Match(T__5);
				State = 85;
				Match(STRING);
				State = 87;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 3984384L) != 0)) {
					{
					State = 86;
					pipeline();
					}
				}

				State = 89;
				Match(RIGHT_DELIM);
				}
				break;
			case 7:
				EnterOuterAlt(_localctx, 7);
				{
				State = 90;
				Match(LEFT_DELIM);
				State = 91;
				Match(T__6);
				State = 92;
				Match(STRING);
				State = 93;
				pipeline();
				State = 94;
				Match(RIGHT_DELIM);
				State = 95;
				template();
				State = 96;
				Match(LEFT_DELIM);
				State = 97;
				Match(T__1);
				State = 98;
				Match(RIGHT_DELIM);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ElseActionContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode LEFT_DELIM() { return GetToken(GoTemplateParser.LEFT_DELIM, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode RIGHT_DELIM() { return GetToken(GoTemplateParser.RIGHT_DELIM, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public TemplateContext template() {
			return GetRuleContext<TemplateContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PipelineContext pipeline() {
			return GetRuleContext<PipelineContext>(0);
		}
		public ElseActionContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_elseAction; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGoTemplateListener typedListener = listener as IGoTemplateListener;
			if (typedListener != null) typedListener.EnterElseAction(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGoTemplateListener typedListener = listener as IGoTemplateListener;
			if (typedListener != null) typedListener.ExitElseAction(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGoTemplateVisitor<TResult> typedVisitor = visitor as IGoTemplateVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitElseAction(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ElseActionContext elseAction() {
		ElseActionContext _localctx = new ElseActionContext(Context, State);
		EnterRule(_localctx, 6, RULE_elseAction);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 102;
			Match(LEFT_DELIM);
			State = 103;
			Match(T__7);
			State = 105;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 3984384L) != 0)) {
				{
				State = 104;
				pipeline();
				}
			}

			State = 107;
			Match(RIGHT_DELIM);
			State = 108;
			template();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PipelineContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public CommandContext[] command() {
			return GetRuleContexts<CommandContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public CommandContext command(int i) {
			return GetRuleContext<CommandContext>(i);
		}
		public PipelineContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_pipeline; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGoTemplateListener typedListener = listener as IGoTemplateListener;
			if (typedListener != null) typedListener.EnterPipeline(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGoTemplateListener typedListener = listener as IGoTemplateListener;
			if (typedListener != null) typedListener.ExitPipeline(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGoTemplateVisitor<TResult> typedVisitor = visitor as IGoTemplateVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPipeline(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PipelineContext pipeline() {
		PipelineContext _localctx = new PipelineContext(Context, State);
		EnterRule(_localctx, 8, RULE_pipeline);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 110;
			command();
			State = 115;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while (_la==T__8) {
				{
				{
				State = 111;
				Match(T__8);
				State = 112;
				command();
				}
				}
				State = 117;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CommandContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public OperandContext[] operand() {
			return GetRuleContexts<OperandContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public OperandContext operand(int i) {
			return GetRuleContext<OperandContext>(i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(GoTemplateParser.IDENTIFIER, 0); }
		public CommandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_command; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGoTemplateListener typedListener = listener as IGoTemplateListener;
			if (typedListener != null) typedListener.EnterCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGoTemplateListener typedListener = listener as IGoTemplateListener;
			if (typedListener != null) typedListener.ExitCommand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGoTemplateVisitor<TResult> typedVisitor = visitor as IGoTemplateVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCommand(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CommandContext command() {
		CommandContext _localctx = new CommandContext(Context, State);
		EnterRule(_localctx, 10, RULE_command);
		int _la;
		try {
			int _alt;
			State = 135;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,12,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 119;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				do {
					{
					{
					State = 118;
					operand();
					}
					}
					State = 121;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & 3984384L) != 0) );
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 124;
				ErrorHandler.Sync(this);
				_alt = 1;
				do {
					switch (_alt) {
					case 1:
						{
						{
						State = 123;
						operand();
						}
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					State = 126;
					ErrorHandler.Sync(this);
					_alt = Interpreter.AdaptivePredict(TokenStream,10,Context);
				} while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER );
				State = 128;
				_la = TokenStream.LA(1);
				if ( !(_la==T__9 || _la==IDENTIFIER) ) {
				ErrorHandler.RecoverInline(this);
				}
				else {
					ErrorHandler.ReportMatch(this);
				    Consume();
				}
				State = 132;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 3984384L) != 0)) {
					{
					{
					State = 129;
					operand();
					}
					}
					State = 134;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class OperandContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public PrimaryContext primary() {
			return GetRuleContext<PrimaryContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode[] IDENTIFIER() { return GetTokens(GoTemplateParser.IDENTIFIER); }
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER(int i) {
			return GetToken(GoTemplateParser.IDENTIFIER, i);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PipelineContext[] pipeline() {
			return GetRuleContexts<PipelineContext>();
		}
		[System.Diagnostics.DebuggerNonUserCode] public PipelineContext pipeline(int i) {
			return GetRuleContext<PipelineContext>(i);
		}
		public OperandContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_operand; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGoTemplateListener typedListener = listener as IGoTemplateListener;
			if (typedListener != null) typedListener.EnterOperand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGoTemplateListener typedListener = listener as IGoTemplateListener;
			if (typedListener != null) typedListener.ExitOperand(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGoTemplateVisitor<TResult> typedVisitor = visitor as IGoTemplateVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitOperand(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public OperandContext operand() {
		OperandContext _localctx = new OperandContext(Context, State);
		EnterRule(_localctx, 12, RULE_operand);
		int _la;
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 137;
			primary();
			State = 154;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,15,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 138;
					Match(T__9);
					State = 139;
					Match(IDENTIFIER);
					State = 140;
					Match(T__10);
					State = 149;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
					if ((((_la) & ~0x3f) == 0 && ((1L << _la) & 3984384L) != 0)) {
						{
						State = 141;
						pipeline();
						State = 146;
						ErrorHandler.Sync(this);
						_la = TokenStream.LA(1);
						while (_la==T__11) {
							{
							{
							State = 142;
							Match(T__11);
							State = 143;
							pipeline();
							}
							}
							State = 148;
							ErrorHandler.Sync(this);
							_la = TokenStream.LA(1);
						}
						}
					}

					State = 151;
					Match(T__12);
					}
					} 
				}
				State = 156;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,15,Context);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class PrimaryContext : ParserRuleContext {
		[System.Diagnostics.DebuggerNonUserCode] public ITerminalNode IDENTIFIER() { return GetToken(GoTemplateParser.IDENTIFIER, 0); }
		[System.Diagnostics.DebuggerNonUserCode] public ChainedFieldContext chainedField() {
			return GetRuleContext<ChainedFieldContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public VariableContext variable() {
			return GetRuleContext<VariableContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public FunctionCallContext functionCall() {
			return GetRuleContext<FunctionCallContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public LiteralContext literal() {
			return GetRuleContext<LiteralContext>(0);
		}
		[System.Diagnostics.DebuggerNonUserCode] public PipelineContext pipeline() {
			return GetRuleContext<PipelineContext>(0);
		}
		public PrimaryContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_primary; } }
		[System.Diagnostics.DebuggerNonUserCode]
		public override void EnterRule(IParseTreeListener listener) {
			IGoTemplateListener typedListener = listener as IGoTemplateListener;
			if (typedListener != null) typedListener.EnterPrimary(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override void ExitRule(IParseTreeListener listener) {
			IGoTemplateListener typedListener = listener as IGoTemplateListener;
			if (typedListener != null) typedListener.ExitPrimary(this);
		}
		[System.Diagnostics.DebuggerNonUserCode]
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IGoTemplateVisitor<TResult> typedVisitor = visitor as IGoTemplateVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitPrimary(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public PrimaryContext primary() {
		PrimaryContext _localctx = new PrimaryContext(Context, State);
		EnterRule(_localctx, 14, RULE_primary);
		try {
			State = 166;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,16,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 157;
				Match(IDENTIFIER);
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 158;
				chainedField();
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 159;
				variable();
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 160;
				functionCall();
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 161;
				literal();
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 162;
				Match(T__10);
				State = 163;
				pipeline();
				State = 164;
				Match(T__12);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
